test/preprocessor/valid/version.glsl
#version 440
#version 440 core
#version 300 es
#version 440 compatibility
