test/preprocessor/invalid/version.glsl
#version
#version 300 // Missing profile
#version 300 core // Mandatory 'es' profile
#version 110 es // Forbidden when version < 150
#version 440 zorglub
#version 666
